--- a/LifeCorp/WebContent/templates/footer.xhtml
+++ b/LifeCorp/WebContent/templates/footer.xhtml
@@ -6,6 +6,6 @@
 <title>Insert title here</title>
 </head>
 <body>
-<div style="background-color:navy;width:100%;color:white">&copy; 2015 LifeCorp&trade;</div>
+<div>&copy; 2015 LifeCorp&trade;</div>
 </body>
 </html>
