--- a/LifeCorp/WebContent/templates/StandardTemplate.xhtml
+++ b/LifeCorp/WebContent/templates/StandardTemplate.xhtml
@@ -3,7 +3,9 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:ui="http://java.sun.com/jsf/facelets">
 <head>
-  <title><ui:insert name="title">Default title</ui:insert></title>
+	<title><ui:insert name="title">Default title</ui:insert></title>
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" />
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css" />
 </head>
 
 <body>
@@ -27,6 +29,9 @@
 		<ui:include src="/templates/footer.xhtml"/>
 	</ui:insert>
 </div>
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 
 </body>
 
